# nibble

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE.bazel  diesel.toml  test-job.hcl
infra/dev/server/: .terraform.lock.hcl  Containerfile  entrypoint.bash  main.tf  node_0.consul.server.json  node_1.consul.server.json  node_2.consul.server.json  nomad.server.hcl
infra/terraform_modules/dev/postgresql/: main.tf  variables.tf
infra/terraform_modules/server/postgresql/: main.tf  variables.tf
src/logging/: BUILD.bazel  lib.rs
src/server/: BUILD.bazel
src/server/config/: BUILD.bazel
src/server/config/src/: lib.rs
src/server/controller/: BUILD.bazel
src/server/controller/src/: ingestor.rs  lib.rs
src/server/entity/: BUILD.bazel
src/server/entity/src/: ingestor.rs  lib.rs
src/server/error/: BUILD.bazel
src/server/error/src/: lib.rs
src/server/handler/: BUILD.bazel
src/server/handler/src/: lib.rs
src/server/handler/src/ingestors/: mod.rs
src/server/handler/src/sources/: mod.rs
src/server/migrations/2022-12-28-042709_ingestor/: down.sql  up.sql
src/server/model/: BUILD.bazel
src/server/model/src/: ingestor.rs  lib.rs  schema.rs  source.rs
src/server/repository/: BUILD.bazel
src/server/repository/src/: ingestor.rs  lib.rs  source.rs
src/server/src/: lib.rs
src/server/test_app/: BUILD.bazel
src/server/test_app/src/: ingestors.rs  lib.rs
src/server/tests/: config.yaml
src/server/tests/ingestors/create/: ok.rs
src/server/view/: BUILD.bazel
src/server/view/src/: ingestor.rs  lib.rs  source.rs
